Revert "Minor bug fix. :sigma:"
This reverts commit 09e9589765d6184ed022c9a172ef3b4cff794bb0.