@@ -1,12 +1,11 @@
 package com.nexia.minigames.games.oitc;
 
-import com.combatreforged.factory.api.world.types.Minecraft;
+import com.combatreforged.factory.api.world.entity.player.Player;
 import com.nexia.core.games.util.LobbyUtil;
 import com.nexia.core.games.util.PlayerGameMode;
 import com.nexia.core.utilities.chat.ChatFormat;
 import com.nexia.core.utilities.item.ItemDisplayUtil;
 import com.nexia.core.utilities.misc.RandomUtil;
-import com.nexia.core.utilities.player.NexiaPlayer;
 import com.nexia.core.utilities.player.PlayerUtil;
 import com.nexia.core.utilities.pos.EntityPos;
 import com.nexia.core.utilities.time.ServerTime;
@@ -48,11 +47,11 @@ import java.util.List;
 import java.util.function.Predicate;
 
 public class OitcGame {
-    public static ArrayList<NexiaPlayer> players = new ArrayList<>();
+    public static ArrayList<AccuratePlayer> players = new ArrayList<>();
 
-    public static ArrayList<NexiaPlayer> spectator = new ArrayList<>();
+    public static ArrayList<AccuratePlayer> spectator = new ArrayList<>();
 
-    public static HashMap<NexiaPlayer, Integer> deathPlayers = new HashMap<>();
+    public static HashMap<AccuratePlayer, Integer> deathPlayers = new HashMap<>();
 
     public static ServerLevel world = null;
 
@@ -64,44 +63,51 @@ public class OitcGame {
 
     public static int queueTime = 15;
 
-    public static ArrayList<NexiaPlayer> queue = new ArrayList<>();
+    public static ArrayList<AccuratePlayer> queue = new ArrayList<>();
 
     public static boolean isStarted = false;
 
     public static boolean isEnding = false;
 
-    private static NexiaPlayer winner = null;
+    private static AccuratePlayer winner = null;
 
     public static final String OITC_TAG = "oitc";
 
     private static int endTime = 5;
 
 
-    public static void leave(NexiaPlayer player) {
-        OitcGame.death(player, player.player().get().getLastDamageSource());
+    public static void leave(ServerPlayer minecraftPlayer) {
+        OitcGame.death(minecraftPlayer, minecraftPlayer.getLastDamageSource());
+        Player player = PlayerUtil.getFactoryPlayer(minecraftPlayer);
+        AccuratePlayer accuratePlayer = AccuratePlayer.create(minecraftPlayer);
 
-        PlayerData data = PlayerDataManager.get(player);
-        OitcGame.spectator.remove(player);
-        OitcGame.queue.remove(player);
-        OitcGame.players.remove(player);
-        OitcGame.deathPlayers.remove(player);
+        PlayerData data = PlayerDataManager.get(minecraftPlayer);
+        OitcGame.spectator.remove(accuratePlayer);
+        OitcGame.queue.remove(accuratePlayer);
+        OitcGame.players.remove(accuratePlayer);
+        OitcGame.deathPlayers.remove(accuratePlayer);
 
         data.kills = 0;
 
         if(OitcGame.players.size() <= 1 && !OitcGame.isEnding && OitcGame.isStarted) {
-            if(OitcGame.players.size() == 1) OitcGame.endGame(OitcGame.players.getFirst());
+            if(OitcGame.players.size() == 1) OitcGame.endGame(OitcGame.players.get(0).get());
             else OitcGame.endGame(null);
         }
 
-        player.getFactoryPlayer().removeTag("in_oitc_game");
+        player.removeTag("in_oitc_game");
 
-        player.reset(true, GameType.ADVENTURE);
+        PlayerUtil.resetHealthStatus(player);
+        minecraftPlayer.setGameMode(GameType.ADVENTURE);
 
-        if(data.gameMode.equals(OitcGameMode.PLAYING) && winner != player) {
+        player.getInventory().clear();
+        minecraftPlayer.inventory.setCarried(ItemStack.EMPTY);
+        minecraftPlayer.getEnderChestInventory().clearContent();
+
+        if(data.gameMode.equals(OitcGameMode.PLAYING) && winner != accuratePlayer) {
             data.savedData.loss++;
         }
 
-        player.getFactoryPlayer().removeTag("oitc");
+        player.removeTag("oitc");
 
         data.gameMode = OitcGameMode.LOBBY;
     }
@@ -111,11 +117,11 @@ public class OitcGame {
             if(OitcGame.isEnding) {
                 int color = 244 * 65536 + 166 * 256 + 71;
                 // r * 65536 + g * 256 + b;
-                if(OitcGame.winner != null && OitcGame.winner.player().get() != null) DuelGameHandler.winnerRockets(OitcGame.winner, OitcGame.world, color);
+                if(OitcGame.winner != null && OitcGame.winner.get() != null) DuelGameHandler.winnerRockets(OitcGame.winner.get(), OitcGame.world, color);
 
                 if(OitcGame.endTime <= 0) {
-                    for(NexiaPlayer player : OitcGame.getViewers()){
-                        player.getFactoryPlayer().runCommand("/hub", 0, false);
+                    for(ServerPlayer player : OitcGame.getViewers()){
+                        PlayerUtil.getFactoryPlayer(player).runCommand("/hub", 0, false);
                     }
 
                     OitcGame.resetAll();
@@ -127,7 +133,7 @@ public class OitcGame {
                     OitcGame.deathPlayers.forEach(((player, integer) -> {
                         int newInt = integer - 1;
 
-                        if(!player.player().get().isSpectator()) player.getFactoryPlayer().setGameMode(Minecraft.GameMode.SPECTATOR);
+                        if(!player.get().isSpectator()) player.get().setGameMode(GameType.SPECTATOR);
 
                         /*
                         OitcGame.deathPlayers.remove(player);
@@ -138,20 +144,20 @@ public class OitcGame {
 
                         Title title = getTitle(newInt);
 
-                        player.sendTitle(title);
-                        player.sendSound(new EntityPos(player.player().get()), SoundEvents.NOTE_BLOCK_HAT, SoundSource.BLOCKS, 10, 1);
+                        PlayerUtil.getFactoryPlayer(player.get()).sendTitle(title);
+                        PlayerUtil.sendSound(player.get(), new EntityPos(player.get()), SoundEvents.NOTE_BLOCK_HAT, SoundSource.BLOCKS, 10, 1);
 
 
                         if(newInt <= 1){
-                            spawnInRandomPos(player);
+                            spawnInRandomPos(player.get());
                             OitcGame.deathPlayers.remove(player);
                             //ServerTime.factoryServer.runCommand("/gamemode adventure " + player.get().getScoreboardName(), 4, false);
-                            player.getFactoryPlayer().setGameMode(Minecraft.GameMode.ADVENTURE);
+                            player.get().setGameMode(GameType.ADVENTURE);
                             BlfScheduler.delay(5, new BlfRunnable() {
                                 @Override
                                 public void run() {
-                                    giveKit(player);
-                                    player.getFactoryPlayer().setGameMode(Minecraft.GameMode.ADVENTURE);
+                                    giveKit(player.get());
+                                    player.get().setGameMode(GameType.ADVENTURE);
                                 }
                             });
 
@@ -164,11 +170,11 @@ public class OitcGame {
 
                     // Yes, I know I am a dumbass.
                     List<Integer> intKills = new ArrayList<>();
-                    HashMap<Integer, NexiaPlayer> kills = new HashMap<>();
+                    HashMap<Integer, ServerPlayer> kills = new HashMap<>();
 
-                    for(NexiaPlayer player : OitcGame.players) {
-                        intKills.add(PlayerDataManager.get(player).kills);
-                        kills.put(PlayerDataManager.get(player).kills, player);
+                    for(AccuratePlayer player : OitcGame.players) {
+                        intKills.add(PlayerDataManager.get(player.get()).kills);
+                        kills.put(PlayerDataManager.get(player.get()).kills, player.get());
                     }
 
                     endGame(kills.get(Collections.max(intKills)));
@@ -180,15 +186,17 @@ public class OitcGame {
 
         } else {
             if(OitcGame.queue.size() >= 2) {
-                for(NexiaPlayer player : OitcGame.queue){
+                for(AccuratePlayer player : OitcGame.queue){
+                    Player fPlayer = PlayerUtil.getFactoryPlayer(player.get());
+
                     if(OitcGame.queueTime <= 5) {
                         Title title = getTitle(OitcGame.queueTime);
 
-                        player.sendTitle(title);
-                        player.sendSound(new EntityPos(player.player().get()), SoundEvents.NOTE_BLOCK_HAT, SoundSource.BLOCKS, 10, 1);
+                        PlayerUtil.getFactoryPlayer(player.get()).sendTitle(title);
+                        PlayerUtil.sendSound(player.get(), new EntityPos(player.get()), SoundEvents.NOTE_BLOCK_HAT, SoundSource.BLOCKS, 10, 1);
                     }
 
-                    player.sendActionBarMessage(
+                    fPlayer.sendActionBarMessage(
                             Component.text("Map » ").color(TextColor.fromHexString("#b3b3b3"))
                                     .append(Component.text(OitcGame.map.name).color(ChatFormat.brandColor2).decoration(ChatFormat.bold, true))
                                     .append(Component.text(" (" + OitcGame.queue.size() + "/" + OitcGame.map.maxPlayers + ")").color(TextColor.fromHexString("#b3b3b3")))
@@ -200,7 +208,7 @@ public class OitcGame {
                     );
 
                     if(OitcGame.queueTime <= 5 || OitcGame.queueTime == 10 || OitcGame.queueTime == 15) {
-                        player.sendMessage(Component.text("The game will start in ").color(TextColor.fromHexString("#b3b3b3"))
+                        fPlayer.sendMessage(Component.text("The game will start in ").color(TextColor.fromHexString("#b3b3b3"))
                                 .append(Component.text(OitcGame.queueTime).color(ChatFormat.brandColor1))
                                 .append(Component.text(" seconds.").color(TextColor.fromHexString("#b3b3b3")))
                         );
@@ -228,42 +236,43 @@ public class OitcGame {
         return Title.title(Component.text(queueTime).color(color), Component.text(""), Title.Times.of(Duration.ofMillis(0), Duration.ofSeconds(1), Duration.ofMillis(0)));
     }
 
-    public static void joinQueue(NexiaPlayer player) {
+    public static void joinQueue(ServerPlayer player) {
         PlayerData data = PlayerDataManager.get(player);
         data.kills = 0;
-        player.getFactoryPlayer().setHealth(player.player().get().getMaxHealth());
+        AccuratePlayer accuratePlayer = AccuratePlayer.create(player);
+        accuratePlayer.get().setHealth(accuratePlayer.get().getMaxHealth());
         if(OitcGame.isStarted || OitcGame.queue.size() >= OitcGame.map.maxPlayers){
-            OitcGame.spectator.add(player);
+            OitcGame.spectator.add(accuratePlayer);
             PlayerDataManager.get(player).gameMode = OitcGameMode.SPECTATOR;
-            player.getFactoryPlayer().setGameMode(Minecraft.GameMode.SPECTATOR);
+            accuratePlayer.get().setGameMode(GameType.SPECTATOR);
         } else {
-            OitcGame.queue.add(player);
-            player.getFactoryPlayer().addTag(LobbyUtil.NO_DAMAGE_TAG);
+            OitcGame.queue.add(accuratePlayer);
+            player.addTag(LobbyUtil.NO_DAMAGE_TAG);
         }
 
-        player.player().get().teleportTo(world, 0, 101, 0, 0, 0);
-        player.player().get().setRespawnPosition(world.dimension(), new BlockPos(0, 100, 0), 0, true, false);
+        player.teleportTo(world, 0, 101, 0, 0, 0);
+        player.setRespawnPosition(world.dimension(), new BlockPos(0, 100, 0), 0, true, false);
     }
 
-    public static void endGame(NexiaPlayer player) {
+    public static void endGame(ServerPlayer serverPlayer) {
         OitcGame.isEnding = true;
-        if(player == null || player.player().get() == null) return;
-        PlayerData data = PlayerDataManager.get(player);
-        OitcGame.winner = player;
+        if(serverPlayer == null) return;
+        PlayerData data = PlayerDataManager.get(serverPlayer);
+        OitcGame.winner = AccuratePlayer.create(serverPlayer);
 
-        player.sendTitle(Title.title(Component.text("You won!").color(ChatFormat.greenColor), Component.text("")));
+        PlayerUtil.getFactoryPlayer(serverPlayer).sendTitle(Title.title(Component.text("You won!").color(ChatFormat.greenColor), Component.text("")));
 
         data.savedData.wins++;
 
-        for(NexiaPlayer viewer : OitcGame.getViewers()){
-            viewer.sendTitle(Title.title(Component.text(player.player().name).color(ChatFormat.brandColor2), Component.text("has won the game! (" + data.kills + " kills)").color(ChatFormat.normalColor)));
+        for(ServerPlayer player : OitcGame.getViewers()){
+            PlayerUtil.getFactoryPlayer(player).sendTitle(Title.title(Component.text(serverPlayer.getScoreboardName()).color(ChatFormat.brandColor2), Component.text("has won the game! (" + data.kills + " kills)").color(ChatFormat.normalColor)));
         }
     }
 
     public static void updateInfo() {
         String[] timer = TickUtil.minuteTimeStamp(OitcGame.gameTime * 20);
-        for(NexiaPlayer player : OitcGame.getViewers()) {
-            player.sendActionBarMessage(
+        for(ServerPlayer player : OitcGame.getViewers()) {
+            PlayerUtil.getFactoryPlayer(player).sendActionBarMessage(
                     Component.text("Map » ").color(TextColor.fromHexString("#b3b3b3"))
                             .append(Component.text(OitcGame.map.name).color(ChatFormat.brandColor2).decoration(ChatFormat.bold, true))
                             .append(Component.text(" | ").color(ChatFormat.lineColor))
@@ -276,8 +285,8 @@ public class OitcGame {
         }
     }
 
-    public static void giveKit(NexiaPlayer player) {
-        player.getFactoryPlayer().getInventory().clear();
+    public static void giveKit(ServerPlayer player) {
+        player.inventory.clearContent();
 
         ItemStack sword = new ItemStack(Items.STONE_SWORD);
         sword.getOrCreateTag().putBoolean("Unbreakable", true);
@@ -290,9 +299,9 @@ public class OitcGame {
 
         ItemStack arrow = new ItemStack(Items.ARROW);
 
-        player.player().get().setSlot(0, sword);
-        player.player().get().setSlot(1, bow);
-        player.player().get().setSlot(2, arrow);
+        player.setSlot(0, sword);
+        player.setSlot(1, bow);
+        player.setSlot(2, arrow);
     }
 
     public static void startGame() {
@@ -310,17 +319,18 @@ public class OitcGame {
             bow.getOrCreateTag().putBoolean("Unbreakable", true);
             bow.hideTooltipPart(ItemStack.TooltipPart.UNBREAKABLE);
 
-            for(NexiaPlayer player : OitcGame.players) {
-                player.player().get().inventory.setItem(0, sword);
-                player.player().get().inventory.setItem(1, bow);
-                player.player().get().inventory.setItem(2, new ItemStack(Items.ARROW));
+            for(AccuratePlayer player : OitcGame.players) {
+                ServerPlayer serverPlayer = player.get();
+                serverPlayer.inventory.setItem(0, sword);
+                serverPlayer.inventory.setItem(1, bow);
+                serverPlayer.inventory.setItem(2, new ItemStack(Items.ARROW));
 
-                PlayerDataManager.get(player).gameMode = OitcGameMode.PLAYING;
+                PlayerDataManager.get(serverPlayer).gameMode = OitcGameMode.PLAYING;
 
-                player.getFactoryPlayer().addTag("in_oitc_game");
-                player.getFactoryPlayer().removeTag(LobbyUtil.NO_DAMAGE_TAG);
+                serverPlayer.addTag("in_oitc_game");
+                serverPlayer.removeTag(LobbyUtil.NO_DAMAGE_TAG);
 
-                spawnInRandomPos(player);
+                spawnInRandomPos(serverPlayer);
 
                 //player.setRespawnPosition(world.dimension(), pos, 0, true, false);
             }
@@ -330,35 +340,33 @@ public class OitcGame {
         }
     }
 
-    public static void spawnInRandomPos(NexiaPlayer player){
+    public static void spawnInRandomPos(ServerPlayer player){
         OitcMap map = OitcGame.map;
         EntityPos spawnPosition = map.spawnPositions.get(RandomUtil.randomInt(map.spawnPositions.size()));
 
-        spawnPosition.teleportPlayer(OitcGame.world, player.player().get());
+        spawnPosition.teleportPlayer(OitcGame.world, player);
     }
 
-    public static boolean isOITCPlayer(NexiaPlayer player){
-        return com.nexia.core.utilities.player.PlayerDataManager.get(player).gameMode == PlayerGameMode.OITC || player.getFactoryPlayer().hasTag("oitc") || player.getFactoryPlayer().hasTag("in_oitc_game");
+    public static boolean isOITCPlayer(net.minecraft.world.entity.player.Player player){
+        return com.nexia.core.utilities.player.PlayerDataManager.get(player).gameMode == PlayerGameMode.OITC || player.getTags().contains("oitc") || player.getTags().contains("in_oitc_game");
     }
 
-    public static void death(NexiaPlayer victim, DamageSource source){
+    public static void death(ServerPlayer victim, DamageSource source){
         PlayerData victimData = PlayerDataManager.get(victim);
-        if(OitcGame.isStarted && !OitcGame.deathPlayers.containsKey(victim) && victimData.gameMode == OitcGameMode.PLAYING) {
-            ServerPlayer attacker = PlayerUtil.getPlayerAttacker(victim.player().get());
-            if(attacker != null) {
-                NexiaPlayer nexiaAttacker = new NexiaPlayer(new AccuratePlayer(attacker));
-                if(!nexiaAttacker.equals(victim)) {
-                    PlayerData attackerData = PlayerDataManager.get(nexiaAttacker);
-                    attackerData.kills++;
-                    attackerData.savedData.kills++;
-                    attacker.setHealth(attacker.getMaxHealth());
-                    attacker.addItem(new ItemStack(Items.ARROW));
-                }
+        AccuratePlayer accurateVictim = AccuratePlayer.create(victim);
+        if(OitcGame.isStarted && !OitcGame.deathPlayers.containsKey(accurateVictim) && victimData.gameMode == OitcGameMode.PLAYING) {
+            ServerPlayer attacker = PlayerUtil.getPlayerAttacker(victim);
+            if(attacker != null && victim != attacker) {
+                PlayerData attackerData = PlayerDataManager.get(attacker);
+                attackerData.kills++;
+                attackerData.savedData.kills++;
+                attacker.setHealth(attacker.getMaxHealth());
+                attacker.addItem(new ItemStack(Items.ARROW));
             }
 
             PlayerDataManager.get(victim).hasDied = true;
-            OitcGame.deathPlayers.remove(victim);
-            OitcGame.deathPlayers.put(victim, 4); // 3 seconds
+            OitcGame.deathPlayers.remove(accurateVictim);
+            OitcGame.deathPlayers.put(accurateVictim, 4); // 3 seconds
         }
     }
 
@@ -406,10 +414,10 @@ public class OitcGame {
         resetAll();
     }
 
-    public static ArrayList<NexiaPlayer> getViewers() {
-        ArrayList<NexiaPlayer> viewers = new ArrayList<>();
-        viewers.addAll(OitcGame.players);
-        viewers.addAll(OitcGame.spectator);
+    public static ArrayList<ServerPlayer> getViewers() {
+        ArrayList<ServerPlayer> viewers = new ArrayList<>();
+        OitcGame.players.forEach(player -> viewers.add(player.get()));
+        OitcGame.spectator.forEach(player -> viewers.add(player.get()));
         return viewers;
     }
 }
